fixed z-indexes

--- a/client/src/components/Star.css
+++ b/client/src/components/Star.css
@@ -17,7 +17,7 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  z-index: 100;
+  z-index: 1;
   width: 100px;
   height: 2px;
   background: linear-gradient(90deg, white, rgba(255, 255, 255, 0));
